--- a/8c/app/templates/index.html
+++ b/8c/app/templates/index.html
@@ -5,14 +5,14 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Olá, {% if name %}{{name}}{%else%}Mundo!{% endif %}</h1>
-    {% if not known %}
-        <p>Prazer conhecer você!</p>
-    {% else  %}
-        <p>Feliz em ver você novamente!</p>
+    <h1>Hello,
+    {% if current_user.is_authenticated %}
+        {{current_user.username}}
+    {% else %}
+        Stranger</h1>
     {% endif %}
 </div>
-{{wtf.quick_form(form)}}
+
 <br>
 <br>
 <p>A sua data/horário local é {{moment(current_time).format('LLL')}}</p>
