--- a/10b/app/templates/user.html
+++ b/10b/app/templates/user.html
@@ -20,6 +20,11 @@
         Las seen {{ moment(user.last_seen).fromNow() }}.
     </p>
 </div>
+{% if current_user.is_administrator() %}
+<a href="{{url_for('.edit_profile_admin', id=user.id)}}" class="btn btn-danger">
+    Edit Profile[Admin] 
+</a>
+{% endif %}
 {% if user == current_user %}
     <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">Edit Profile</a>
 {% endif %}
